JumpScript/tests/baselines/reference/scannerNumericLiteral4.errors.txt
tests/cases/conformance/scanner/ecmascript5/scannerNumericLiteral4.jump(1,3): error TS1124: Digit expected.


==== tests/cases/conformance/scanner/ecmascript5/scannerNumericLiteral4.jump (1 errors) ====
    1e
      
!!! error TS1124: Digit expected.